--- a/药品专项检查/代码/jsPageFilter/package.json
+++ b/药品专项检查/代码/jsPageFilter/package.json
@@ -13,6 +13,8 @@
     "author": "Easy Zhang",
     "license": "Apache-2.0",
     "dependencies": {
-        "koa": "^2.8.1"
+        "koa": "^2.8.1",
+        "koa-bodyparser": "^3.2.0",
+        "koa-router": "^7.0.1"
     }
 }
